feat(*): store gamemode in hall of fame
Ref: #133
